# keepy-tui

./: .gitignore  Cargo.toml
src/: main.rs
src/data/: repositories.rs
src/domain/: entities.rs  repositories.rs  usecases.rs
src/ui/models/: mod.rs
