[package]
name = "keepy-tui"
version = "0.1.0"
authors = ["jobot0 <me@jobo.to>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10"
termion = "1.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

[dev-dependencies]
mockall="0.8.1"
